Izmenjene rute za predmete

--- a/templates/izbor_semestra.html
+++ b/templates/izbor_semestra.html
@@ -109,22 +109,22 @@ IZBOR SEMESTRA
       <table class="table mt-1 table-hover">
         <tbody>
           <tr>
-            <td class="border-info"><a class="text-dark" href="/strukture-podataka-i-algoriitmi">Strukture podataka i algoritmi</a></td>
+            <td class="border-info"><a class="text-dark" href="predmet/strukture-podataka-i-algoriitmi">Strukture podataka i algoritmi</a></td>
           </tr>
           <tr>
-            <td class="border-info"><a class="text-dark" href="/statistika">Statistika</a></td>
+            <td class="border-info"><a class="text-dark" href="predmet/statistika">Statistika</a></td>
           </tr>
           <tr>
-            <td class="border-info"><a class="text-dark" href="/menadzment-tehnologije-i-razvoja">Menadžment tehnologije i razvoja</a></td>
+            <td class="border-info"><a class="text-dark" href="predmet/menadzment-tehnologije-i-razvoja">Menadžment tehnologije i razvoja</a></td>
           </tr>
           <tr>
-            <td class="border-info"><a class="text-dark" href="/finansijski-menadzment-i-racunovodstvo">Finansijski menadžment i računovodstvo</a></td>
+            <td class="border-info"><a class="text-dark" href="predmet/finansijski-menadzment-i-racunovodstvo">Finansijski menadžment i računovodstvo</a></td>
           </tr>
           <tr>
-            <td class="border-info"><a class="text-dark" href="/numericka-analiza">Numerička analiza</a></td>
+            <td class="border-info"><a class="text-dark" href="predmet/numericka-analiza">Numerička analiza</a></td>
           </tr>
           <tr>
-            <td class="border-info"><a class="text-dark" href="/diskretne-matematicke-strukture">Diskretne matematičke strukture</a></td>
+            <td class="border-info"><a class="text-dark" href="predmet/diskretne-matematicke-strukture">Diskretne matematičke strukture</a></td>
           </tr>
         </tbody>
       </table>
