--- a/templates/korisnici/login.html
+++ b/templates/korisnici/login.html
@@ -7,8 +7,8 @@ Login
 Dobro došli nazad
 {% endblock %}
 {% block body %}
-<div class="container">
-    <div class="row">
+<div class="d-flex justify-content-center">
+    <div class=" mt-5 card card-body border-info" style="max-width: 400px;">
         <form method="post">
             {% csrf_token %}
             <div class="form-group">
