--- a/templates/korisnici/uredi_interesovanja.html
+++ b/templates/korisnici/uredi_interesovanja.html
@@ -7,8 +7,8 @@ Uredi interesovanja
 Zdravo, {{user.profil.ime}}
 {% endblock %}
 {% block body %}
-<div class="container">
-<div class="row">
+<div class="d-flex justify-content-center">
+    <div class=" mt-5 card card-body border-info" style="max-width: 900px;">
     <form method="post">
         {% csrf_token %}
         {{form|crispy}}
